@@ -1,10 +1,9 @@
 NAME
-  redbg - restricted debugging utility
+  redbug - restricted debugging utility
  
 SYNOPSIS
-  redbg:go(Time,Msgs,Trc[,Proc[,Where[,Target]]]) -> pid()|EXIT
-  redbg:stop([Target]) -> atom()
-  redbg:kill([Target]) -> atom()
+  redbug:start(Time,Msgs,Trc[,Proc[,Where[,Target]]]) -> pid()|EXIT
+  redbug:stop([Target]) -> atom()
 
 DESCRIPTION
 
@@ -57,38 +56,38 @@ DESCRIPTION
  
 EXAMPLES
  
-redbg:go(3000,3,'receive',prfTarg).
- **redbg stopped - 3 msgs**
+redbug:start(3000,3,'receive',prfTarg).
+ **redbug stopped - 3 msgs**
 {'receive',{timeout,#Ref<0.0.0.1649>,tick},prfTarg,{16,47,22,1009}}
 {'receive',{<0.175.0>,get_status,{ok,3657,3658}},prfTarg,{16,47,22,1072}}
 {'receive',{<0.382.0>,get_status,{ok,37,26}},prfTarg,{16,47,22,1088}}
 
-redbg:go(3000,3,['send','receive'],prfTarg).   
-**redbg stopped - 3 msgs**
+redbug:start(3000,3,['send','receive'],prfTarg).   
+**redbug stopped - 3 msgs**
 {'receive',{timeout,#Ref<0.0.0.2005>,tick},prfTarg,{16,52,48,1011}}
 {send,{{<0.364.0>,get_status},{inet_tcp_dist,do_accept,6}},
       prfTarg,
       {16,52,48,1068}}
 {'receive',{<0.175.0>,get_status,{ok,3820,3821}},prfTarg,{16,52,48,1088}}
 
-redbg:go(3000,3,{erlang,now}).
-**redbg stopped - 1 msgs**
+redbug:start(3000,3,{erlang,now}).
+**redbug stopped - 1 msgs**
 {call,{erlang,now,[]},{erlang,apply,2},{16,44,25,176124}}
 
-redbg:go(3000,3,{erlang,now,[return]}).
-**redbg stopped - 2 msgs**
+redbug:start(3000,3,{erlang,now,[return]}).
+**redbug stopped - 2 msgs**
 {call,{erlang,now,[]},{erlang,apply,2},{16,44,39,773608}}
 {return,{erlang,now,0},{1141,746279,773613}}
 
-redbg:go(3000,3,{erlang,now,[return,stack]}).
- **redbg stopped - 2 msgs**
+redbug:start(3000,3,{erlang,now,[return,stack]}).
+ **redbug stopped - 2 msgs**
 {call,{erlang,now,[]},{erlang,apply,2},{16,44,58,386617}}
   {shell,eval_loop,3}  
   {shell,exprs,6}      
 {return,{erlang,now,0},{1141,746298,386621}}
 
-redbg:go(3000,3,{ets,tab2list,[{inet_db}]}).
+redbug:start(3000,3,{ets,tab2list,[{inet_db}]}).
 (erl@foo)1> ets:tab2list(inet_db).
 (erl@foo)2> ets:tab2list(ac_tab).
-**redbg stopped - 1 msgs**
+**redbug stopped - 1 msgs**
 {call,{ets,tab2list,[inet_db]},{erlang,apply,2},{16,43,54,301126}}
